--- a/index.html
+++ b/index.html
@@ -3,196 +3,136 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CoolKidZ Homepage</title>
+    <title>CoolKidZ</title>
     <style>
         body {
-            margin: 0;
             font-family: Arial, sans-serif;
-            background-image: url('https://images.unsplash.com/photo-1563268381-06ddf2b1f46d?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGZsb3dlciUyMHNrZXRjaCUyMGJsYWNrJTIwYmFja2dyb3VuZHxlbnwwfHwwfHx8MA%3D%3D');
-            background-size: cover;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            height: 100vh;
-            color: white;
-            padding: 20px;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
         }
 
-        header {
-            width: 100%;
+        .header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 15px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10px;
         }
 
-        #welcome-message {
-            position: absolute;
-            top: 10px;
-            left: 10px;
+        .nav button {
+            margin-left: 10px;
         }
 
-        button {
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #28a745;
-            color: white;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #218838;
-        }
-
-        .container {
+        .welcome-message {
             text-align: center;
-            margin-top: 100px; /* Adjusted margin to position below welcome message */
+            margin: 20px 0;
         }
 
-        .video-container {
-            margin-top: 20px;
+        .video-section {
+            text-align: center;
+            margin: 20px 0;
         }
 
-        .video {
-            margin: 10px 0;
+        .video-preview {
+            text-align: center;
+            margin: 20px 0;
         }
 
-        #add-video-container {
-            display: none;
-            margin-top: 20px;
+        .about-us {
+            text-align: center;
+            margin: 20px;
+            padding: 10px;
+            background-color: white;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
-    <header>
-        <div id="welcome-message">Welcome back, <span id="username-display"></span>!</div>
-        <div>
-            <button id="sign-in-btn">Log In</button>
-            <button id="sign-out-btn" style="display: none;">Sign Out</button>
-            <button id="add-video-btn" style="display: none;">Add Video</button>
-        </div>
-    </header>
-    <div class="container">
+    <div class="header">
         <h1>CoolKidZ</h1>
-        <div class="video-container" id="video-list">
-            <p>Videos:</p>
-            <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/p3NXd3DhH08" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>Skateboard Video</p>
-            </div>
-        </div>
-
-        <div id="add-video-container">
-            <h3>Add Your Video</h3>
-            <button id="choose-file-btn">Add File</button>
-            <input type="file" id="file-input" style="display: none;">
-            <input type="text" id="video-url" placeholder="Or enter video URL (YouTube link)">
-            <button id="post-video-btn">Post Video</button>
-            <div id="video-preview" style="display: none;">
-                <h4>Video Preview:</h4>
-                <iframe id="user-video-iframe" width="560" height="315" frameborder="0" allowfullscreen></iframe>
-                <button id="copy-link-btn" style="display: none;">Copy Link</button>
-            </div>
+        <div class="nav">
+            <button id="logoutBtn">Log Out</button>
+            <button id="addVideoBtn">Add Video</button>
+            <button id="signupBtn">Sign Up</button>
         </div>
     </div>
 
+    <div id="welcomeMessage" class="welcome-message" style="display: none;">
+        <h2>Welcome back, <span id="username"></span>!</h2>
+    </div>
+
+    <div class="video-section">
+        <h3>Videos:</h3>
+        <iframe id="userVideoIframe" width="560" height="315" style="display: none;" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/y6uP6r9y8tM" frameborder="0" allowfullscreen></iframe> <!-- Skateboard video -->
+    </div>
+
+    <div id="videoPreview" class="video-preview" style="display: none;">
+        <h3>Your Video Preview:</h3>
+        <iframe id="userVideo" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+        <button id="copyLinkBtn">Copy Link</button>
+    </div>
+
+    <div class="about-us">
+        <h3>About Us</h3>
+        <p>At CoolKidZ, we believe in sharing talents so everyone shines in their own way. Everyone is unique, and we celebrate that!</p>
+    </div>
+
     <script>
-        const signInBtn = document.getElementById('sign-in-btn');
-        const signOutBtn = document.getElementById('sign-out-btn');
-        const addVideoBtn = document.getElementById('add-video-btn');
-        const welcomeMessage = document.getElementById('welcome-message');
-        const usernameDisplay = document.getElementById('username-display');
-        const addVideoContainer = document.getElementById('add-video-container');
-        const chooseFileBtn = document.getElementById('choose-file-btn');
-        const fileInput = document.getElementById('file-input');
-        const videoUrlInput = document.getElementById('video-url');
-        const postVideoBtn = document.getElementById('post-video-btn');
-        const videoPreview = document.getElementById('video-preview');
-        const userVideoIframe = document.getElementById('user-video-iframe');
-        const copyLinkBtn = document.getElementById('copy-link-btn');
+        // Simulating a logged-in user
+        const username = "User"; // Replace with actual username from login
+        document.getElementById("username").textContent = username;
+        document.getElementById("welcomeMessage").style.display = "block";
 
-        function updateUI() {
-            const username = localStorage.getItem('coolkidzUsername');
-            if (username) {
-                usernameDisplay.textContent = username;
-                signInBtn.style.display = 'none';
-                signOutBtn.style.display = 'inline';
-                addVideoBtn.style.display = 'inline';
-                addVideoContainer.style.display = 'block'; // Show add video container
+        // Log Out button functionality
+        document.getElementById("logoutBtn").addEventListener("click", () => {
+            window.location.href = "https://wafflenugget.github.io/CoolKidZ-Registration/";
+        });
+
+        // Add Video button functionality
+        document.getElementById("addVideoBtn").addEventListener("click", () => {
+            const videoType = prompt("Do you want to add a video URL or select a file? (Enter 'url' or 'file')");
+            if (videoType === "url") {
+                const videoUrl = prompt("Please enter the URL of your video:");
+                if (videoUrl) {
+                    document.getElementById("userVideoIframe").src = videoUrl;
+                    document.getElementById("userVideoIframe").style.display = 'block';
+                    document.getElementById("videoPreview").style.display = 'block';
+                    document.getElementById("userVideo").src = videoUrl;
+                }
+            } else if (videoType === "file") {
+                const fileInput = document.createElement("input");
+                fileInput.type = "file";
+                fileInput.accept = "video/*";
+                fileInput.onchange = (event) => {
+                    const file = event.target.files[0];
+                    if (file) {
+                        const fileURL = URL.createObjectURL(file);
+                        document.getElementById("userVideo").src = fileURL;
+                        document.getElementById("videoPreview").style.display = 'block';
+                    }
+                };
+                fileInput.click();
             } else {
-                usernameDisplay.textContent = '';
-                signInBtn.style.display = 'inline';
-                signOutBtn.style.display = 'none';
-                addVideoBtn.style.display = 'none';
-                addVideoContainer.style.display = 'none'; // Hide add video container
-            }
-        }
-
-        signInBtn.addEventListener('click', () => {
-            // Redirect to registration page
-            window.location.href = 'https://wafflenugget.github.io/CoolKidZ-Registration/';
-        });
-
-        signOutBtn.addEventListener('click', () => {
-            localStorage.removeItem('coolkidzUsername');
-            updateUI();
-            // Redirect to registration page after signing out
-            window.location.href = 'https://wafflenugget.github.io/CoolKidZ-Registration/';
-        });
-
-        addVideoBtn.addEventListener('click', () => {
-            addVideoContainer.style.display = 'block'; // Show add video container
-        });
-
-        chooseFileBtn.addEventListener('click', () => {
-            fileInput.click(); // Trigger file input click
-        });
-
-        fileInput.addEventListener('change', (event) => {
-            const file = event.target.files[0];
-            if (file) {
-                const url = URL.createObjectURL(file); // Create a temporary URL for the video file
-                userVideoIframe.src = url; // Set iframe source to the user video
-                videoPreview.style.display = 'block'; // Show video preview
-                copyLinkBtn.style.display = 'inline'; // Show copy link button
+                alert("Invalid option! Please choose 'url' or 'file'.");
             }
         });
 
-        videoUrlInput.addEventListener('input', () => {
-            const url = videoUrlInput.value;
-            if (url) {
-                userVideoIframe.src = url; // Set iframe source to user-provided URL
-                videoPreview.style.display = 'block'; // Show video preview
-                copyLinkBtn.style.display = 'inline'; // Show copy link button
-            }
-        });
-
-        postVideoBtn.addEventListener('click', () => {
-            const username = localStorage.getItem('coolkidzUsername');
-            const videoUrl = videoUrlInput.value || userVideoIframe.src;
-            if (videoUrl) {
-                // Here, you could save the videoUrl associated with the username to your backend
-                alert(`Your video has been safely posted on CoolKidZ! Here is your URL: ${videoUrl}`);
-                copyLinkBtn.style.display = 'inline';
-            } else {
-                alert('Invalid video. Please try again.');
-            }
-        });
-
-        copyLinkBtn.addEventListener('click', () => {
-            const videoUrl = videoUrlInput.value || userVideoIframe.src;
+        // Copy Link button functionality
+        document.getElementById("copyLinkBtn").addEventListener("click", () => {
+            const videoUrl = document.getElementById("userVideo").src;
             navigator.clipboard.writeText(videoUrl).then(() => {
-                alert('Video URL copied to clipboard!');
-            }).catch(err => {
-                console.error('Failed to copy: ', err);
+                alert("Video link copied to clipboard!");
+                window.location.href = "https://wafflenugget.github.io/CoolKidZ/";
             });
-            // Redirect back to homepage after copying link
-            window.location.href = 'https://wafflenugget.github.io/CoolKidZ/';
         });
 
-        updateUI(); // Call this function to update the UI based on local storage
+        // Sign Up button functionality
+        document.getElementById("signupBtn").addEventListener("click", () => {
+            window.location.href = "https://wafflenugget.github.io/CoolKidZ-Registration/";
+        });
     </script>
 </body>
 </html>
