--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="video-section">
         <h3>Videos:</h3>
         <iframe id="userVideoIframe" width="560" height="315" style="display: none;" frameborder="0" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/y6uP6r9y8tM" frameborder="0" allowfullscreen></iframe> <!-- Skateboard video -->
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=p3NXd3DhH08&t=11s" frameborder="0" allowfullscreen></iframe> <!-- Skateboard video -->
     </div>
 
     <div id="videoPreview" class="video-preview" style="display: none;">
