--- a/index.html
+++ b/index.html
@@ -12,20 +12,25 @@
             background-position: center;
             margin: 0;
             padding: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .container {
-            max-width: 500px;
-            margin: 100px auto;
+            max-width: 400px;
+            width: 100%;
+            background-color: rgba(255, 255, 255, 0.8);
             padding: 20px;
-            background-color: rgba(255, 255, 255, 0.9);
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            text-align: center;
         }
 
         h1 {
-            text-align: center;
             color: #4CAF50;
+            margin-bottom: 20px;
         }
 
         .form-group {
@@ -61,13 +66,10 @@
         }
 
         .video-container {
-            margin-top: 30px;
-            text-align: center;
+            margin-top: 20px;
         }
 
         .signout-btn {
-            display: block;
-            text-align: center;
             margin-top: 20px;
             padding: 10px;
             background-color: #FF5733;
@@ -99,11 +101,10 @@
 
     <!-- YouTube Video Display -->
     <div class="video-container">
-        <h2>Welcome to CoolKidZ!</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/p3NXd3DhH08" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
-    <!-- Sign Out Button -->
+    <!-- Sign Out Button (Initially hidden) -->
     <button class="signout-btn" id="signOutButton" style="display: none;" onclick="signOut()">Sign Out</button>
 
     <script>
@@ -115,6 +116,9 @@
             const username = document.getElementById('username').value;
             
             if (username.length >= 6 && username.length <= 9) {
+                // Show sign-out button after registration
+                document.getElementById('signOutButton').style.display = 'block';
+
                 // Simulate redirect after successful registration
                 alert("Registration successful! Redirecting to your CoolKidZ profile...");
                 window.location.href = "https://codepen.io/KIDS-LEARNING-FOR-EVRYONE/pen/azodByN";
@@ -123,7 +127,7 @@
             }
         });
 
-        // Sign Out Button
+        // Sign Out Button Logic
         function signOut() {
             alert("You have been signed out.");
             window.location.reload();
